# wind

./: .gitignore  TODO  autogen.sh  configure.ac
assets/sphere/: fragment.glsl  vertex.glsl
src/: Makefile.am  main.cpp  shader.h  shape.h
src/gl/: loader.h  model.h  render.h  scene.h  types.h
